chore(deps) use git dep for vec-drain-where

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ version = "0.4.0-wip"
 
 [dependencies]
 stable_deref_trait = "1.0"
-vec-drain-where = { path = "../vec-drain-where" }
+vec-drain-where = { git = "https://github.com/1aim/vec-drain-where.git" }
