--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ license = "MIT OR Apache-2.0"
 name = "total-order-multi-map"
 readme = "./README.md"
 repository = "https://github.com/1aim/total-order-multi-map/"
-version = "0.4.0"
+version = "0.4.1-wip"
 
 [dependencies]
-stable_deref_trait = "1.0"
-vec-drain-where = { git = "https://github.com/1aim/vec-drain-where.git" }
+stable_deref_trait = "1"
+vec-drain-where = "1"
